FormFields: fix horizontal scroll

--- a/webapp/src/components/Input/style.css
+++ b/webapp/src/components/Input/style.css
@@ -166,6 +166,10 @@
   min-height: 25px;
 }
 
+.multilineText {
+  overflow: hidden;
+}
+
 .containerBoxes > textarea,
 .containerBoxes > input {
   padding-left: 16px;
